# odas

./: .gitignore  CMakeLists.txt  build.sh  config_build.sh
app/: CMakeLists.txt  build.sh  config_build.sh  main.cpp
app/comm_audio/: comm_audio.c  comm_audio.h
config/odaslive/: ReSpeaker.cfg  respeaker_8_mic_array.cfg
demo/3519/: sample_audio.c  sample_comm.h  sample_comm_audio.c
demo/odascore/: comm_audio.c  odascore.c  odascore.h  uac.c
demo/odaslive/: configs.c  configs.h  main.c  objects.c  objects.h  parameters.c  parameters.h  profiler.c  profiler.h  threads.c  threads.h
include/odas/aconnector/: acon_hops.h
include/odas/amodule/: amod_resample.h  amod_sss.h  amod_sst.h
include/odas/asource/: asrc_hops.h
include/odas/comm/: aml_ringbuffer.h  comm_audio.h  ring_buffer.h
include/odas/general/: interface.h  thread.h
include/odas/module/: mod_sss.h  mod_sst.h
include/odas/sink/: snk_hops.h
include/odas/source/: src_hops.h  src_pcm.h
src/aconnector/: acon_hops.c
src/amodule/: amod_sss.c  amod_sst.c
src/asource/: asrc_hops.c
src/comm/: aml_ringbuffer.c  comm_audio.c  ring_buffer.c
src/general/: interface.c  thread.c
src/init/: scanning.c
src/module/: mod_resample.c  mod_sss.c  mod_sst.c
src/sink/: snk_hops.c  snk_tracks.c
src/source/: src_hops.c  src_pcm.c
src/system/: demixing2freq.c
